--- a/msdyncrmWorkflowTools/msdyncrmWorkflowTools/msdyncrmWorkflowTools.csproj
+++ b/msdyncrmWorkflowTools/msdyncrmWorkflowTools/msdyncrmWorkflowTools.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Class\DistributeWFActivityManyToMany.cs" />
     <Compile Include="Class\DistributeWFActivityOneToMany.cs" />
     <Compile Include="Class\ExecuteWorkflowForRecordsinQuery.cs" />
+    <Compile Include="Class\GetEntityObjectTypeCode.cs" />
     <Compile Include="Class\SetLookupFieldFromRecordUrl.cs" />
     <Compile Include="Class\ResolveCase.cs" />
     <Compile Include="Class\ShareSecuredField.cs" />
