--- a/msdyncrmWorkflowTools/msdyncrmWorkflowTools/msdyncrmWorkflowTools.csproj
+++ b/msdyncrmWorkflowTools/msdyncrmWorkflowTools/msdyncrmWorkflowTools.csproj
@@ -93,6 +93,7 @@
     </Compile>
     <Compile Include="Class\CalculateAgregateDate.cs" />
     <Compile Include="Class\CalculatePrice.cs" />
+    <Compile Include="Class\CloneAssociatedRecords.cs" />
     <Compile Include="Class\CloneChildren.cs" />
     <Compile Include="Class\CreateOpportunityProduct.cs" />
     <Compile Include="Class\DistributeWFActivityManyToMany.cs" />
