--- a/msdyncrmWorkflowTools/msdyncrmWorkflowTools_Tests/packages.config
+++ b/msdyncrmWorkflowTools/msdyncrmWorkflowTools_Tests/packages.config
@@ -1,12 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.5" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.50" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.5" targetFramework="net461" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.5" targetFramework="net461" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.50" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.7" targetFramework="net461" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="6.0.7" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
